@@ -1,5 +1,13 @@
 2000-07-05  John Harper  <john@dcs.warwick.ac.uk>
 
+	* nokogiri-interfaces.jl.in (*nokogiri-directory*): new special
+	variable
+
+	* monitor.png: install this locally instead of relying on GNOME
+	version
+	* nokogiri-widgets/workspace-geometry.jl (monitor-pixbuf): use
+	the local version
+
 	* Makefile.in: support GNOME and non-GNOME installations
 
 	* nokogiri-widgets/workspace-geometry.jl: new widget, uses
